--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
                                 <rect y="25" width="30" height="5" rx="2" fill="#fff"/>
                             </svg>
                         </div>
+                    </div>
 
-                        <div class="logo">
-                            <h1>KSV</h1>
+                    <div class="logo">
+                        <div class="sub-title">
+                            <p>Korean Solo Vocal Recommendation Platform</p>
+                        </div>
+                        <div class="main-title">
+                            <h1>ksv</h1>
                         </div>
                     </div>
 
@@ -47,15 +52,6 @@
 
             <main class="main-container">
                 <div class="main-banner">
-                    <div class="title-wrap">
-                        <div class="sub-title">
-                            <p>Korean Solo Vocal Recommendation Platform</p>
-                        </div>
-                        <div class="main-title">
-                            <h1>ksv</h1>
-                        </div>
-                    </div>
-
                     <div class="screen-container">
                         <div class="video-screen">
                             <div class="screen-opacity"></div>
@@ -91,27 +87,27 @@
                         </div>
 
                         <div class="main-ksvArtist">
-                            <div class="title-wrap">
-                                <div class="ksvArtist-title">
-                                    <h1>Ksv Artist</h1>
+                                <div class="title-wrap">
+                                    <div class="ksvArtist-title">
+                                        <h1>Ksv Artist</h1>
+                                    </div>
+
+                                    <div class="ksvArtist-info">
+                                        <p>ksv에서 추천하는 다양한 아티스트들을 확인해보세요.</p>
+                                    </div>
+
+                                    <a href = "#" class="view-ksvArtist">
+                                        <span>view more</span>
+                                        <svg>
+                                            <circle cx="15" cy="15" r="15"/>
+                                            <path d="M17.3536 15.3536C17.5488 15.1583 17.5488 14.8417 17.3536 14.6464L14.1716 11.4645C13.9763 11.2692 13.6597 11.2692 13.4645 11.4645C13.2692 11.6597 13.2692 11.9763 13.4645 12.1716L16.2929 15L13.4645 17.8284C13.2692 18.0237 13.2692 18.3403 13.4645 18.5355C13.6597 18.7308 13.9763 18.7308 14.1716 18.5355L17.3536 15.3536ZM16 15.5H17V14.5H16V15.5Z"/>
+                                        </svg>
+                                    </a>
                                 </div>
 
-                                <div class="ksvArtist-info">
-                                    <p>ksv에서 추천하는 다양한 아티스트들을 확인해보세요.</p>
+                                <div class="carousel-Artist">
+                                    <div class="carousel-animateBox"></div>
                                 </div>
-
-                                <a href = "#" class="view-ksvArtist">
-                                    <span>view more</span>
-                                    <svg>
-                                        <circle cx="15" cy="15" r="15"/>
-                                        <path d="M17.3536 15.3536C17.5488 15.1583 17.5488 14.8417 17.3536 14.6464L14.1716 11.4645C13.9763 11.2692 13.6597 11.2692 13.4645 11.4645C13.2692 11.6597 13.2692 11.9763 13.4645 12.1716L16.2929 15L13.4645 17.8284C13.2692 18.0237 13.2692 18.3403 13.4645 18.5355C13.6597 18.7308 13.9763 18.7308 14.1716 18.5355L17.3536 15.3536ZM16 15.5H17V14.5H16V15.5Z"/>
-                                    </svg>
-                                </a>
-                            </div>
-
-                            <div class="carousel-Artist">
-                                <div class="carousel-animateBox"></div>
-                            </div>
                         </div>
 
                         <div class="marquee-container">
@@ -129,55 +125,54 @@
                     </div>
                 </div>
 
-                <div class="week-recommend">
-                    <div class="week-artist">
-                        <div class="artist-info"></div>
-                        <div class="artist-topTrack">
+                <div class="main-contents">
+                    <div class="week-recommend">
+                        <div class="week-artist">
+                            <div class="artist-info"></div>
+                            <div class="artist-topTrack">
+                                <div class="title-wrap">
+                                    <h3>Top Track</h3>
+                                </div>
+
+                                <div class="track-info">
+                                    <div class="track-img"></div>
+                                    <div class="track-title"></div>
+                                    <div class="track-artist"></div>
+                                </div>
+                                
+                                <div class="topTrack-video">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="artist-trackList">
                             <div class="title-wrap">
-                                <h3>Top Track</h3>
-                            </div>
-
-                            <div class="track-info">
-                                <div class="track-img"></div>
-                                <div class="track-title"></div>
-                                <div class="track-artist"></div>
-                            </div>
-                            
-                            <div class="topTrack-video">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="artist-trackList">
-                        <div class="title-wrap">
-                            <div class="trackList-title">
-                                <h2>Artist Music</h2>
-                            </div>
-
-                            <div class="slide-control">
-                                <div class="slide-prev">
-                                    <svg width="40" height="40" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <circle cx="25" cy="25" r="25" transform="rotate(180 25 25)"/>
-                                        <path d="M18.106 23.9393C17.5202 24.5251 17.5202 25.4749 18.106 26.0607L27.6519 35.6066C28.2377 36.1924 29.1875 36.1924 29.7733 35.6066C30.3591 35.0208 30.3591 34.0711 29.7733 33.4853L21.288 25L29.7733 16.5147C30.3591 15.9289 30.3591 14.9792 29.7733 14.3934C29.1875 13.8076 28.2377 13.8076 27.6519 14.3934L18.106 23.9393ZM20 23.5H19.1667V26.5H20V23.5Z"/>
-                                    </svg>
+                                <div class="trackList-title">
+                                    <h2>Artist Music</h2>
                                 </div>
-                                <div class="slide-next">
-                                    <svg width="40" height="40" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <circle cx="25" cy="25" r="25" transform="rotate(180 25 25)"/>
-                                        <path d="M31.894 26.0607C32.4798 25.4749 32.4798 24.5251 31.894 23.9393L22.3481 14.3934C21.7623 13.8076 20.8125 13.8076 20.2267 14.3934C19.6409 14.9792 19.6409 15.9289 20.2267 16.5147L28.712 25L20.2267 33.4853C19.6409 34.0711 19.6409 35.0208 20.2267 35.6066C20.8125 36.1924 21.7623 36.1924 22.3481 35.6066L31.894 26.0607ZM30 26.5H30.8333V23.5H30V26.5Z"/>
-                                    </svg>
+
+                                <div class="slide-control">
+                                    <div class="slide-prev" id = "slide-button" data-dir = "prev">
+                                        <svg width="40" height="40" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="25" cy="25" r="25" transform="rotate(180 25 25)"/>
+                                            <path d="M18.106 23.9393C17.5202 24.5251 17.5202 25.4749 18.106 26.0607L27.6519 35.6066C28.2377 36.1924 29.1875 36.1924 29.7733 35.6066C30.3591 35.0208 30.3591 34.0711 29.7733 33.4853L21.288 25L29.7733 16.5147C30.3591 15.9289 30.3591 14.9792 29.7733 14.3934C29.1875 13.8076 28.2377 13.8076 27.6519 14.3934L18.106 23.9393ZM20 23.5H19.1667V26.5H20V23.5Z"/>
+                                        </svg>
+                                    </div>
+                                    <div class="slide-next" id = "slide-button" data-dir="next">
+                                        <svg width="40" height="40" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="25" cy="25" r="25" transform="rotate(180 25 25)"/>
+                                            <path d="M31.894 26.0607C32.4798 25.4749 32.4798 24.5251 31.894 23.9393L22.3481 14.3934C21.7623 13.8076 20.8125 13.8076 20.2267 14.3934C19.6409 14.9792 19.6409 15.9289 20.2267 16.5147L28.712 25L20.2267 33.4853C19.6409 34.0711 19.6409 35.0208 20.2267 35.6066C20.8125 36.1924 21.7623 36.1924 22.3481 35.6066L31.894 26.0607ZM30 26.5H30.8333V23.5H30V26.5Z"/>
+                                        </svg>
+                                    </div>
                                 </div>
                             </div>
+
+                            <div class="track-List">
+                                <div class="slide-wrap"></div>
+                            </div>
                         </div>
 
-                        <div class="track-List">
-                            <div class="slide-wrap"></div>
-                        </div>
                     </div>
-
-                </div>
-
-                <div class="artist-container">
                 </div>
             </main>
         </div>
