--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name = "description" content="Korean Solo Vocal, Special Voice Recommeded Site, 한국 음원 차트에서 가장 인기가 많은 솔로 가수를 추천하며
         특별하고 유니크한 보이스를 가진 아티스트들을 추천하는 사이트입니다."/>
+        <meta property="og:title" content="Korean Solo Vocal Site"/>
+        <meta property="og:description" content="Korean Solo Vocal, Special Voice Recommeded Site"/>
+        <meta name="google-site-verification" content="h2w6dinivACPLlPnqhMp348LLkjMp2eZJcOXrVuMC3I" />
         <script src = "./build/main.js"></script>
+        <link href="./build/common.css" rel = "stylesheet"/>
     </head>
 
     <body>
