--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             </div>
 
                             <div class="introduce-video">
-                                <div class="video-wrap">
+                                <div class="introduce-imageBox">
                                 </div>
                             </div>
                         </div>
