--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <meta property="og:title" content="KSV"/>
         <meta property="og:description" content="매주마다 spotify 한국 음원 차트 정보를 제공하여 K-POP 트렌드를 소개하고 특별하고 유니크한 보이스를 가진 아티스트들을 추천하는 사이트입니다."/>
         <meta name="google-site-verification" content="h2w6dinivACPLlPnqhMp348LLkjMp2eZJcOXrVuMC3I" />
-        <script src = "./build/main.js"></script>
         <link href="./build/common.css" rel = "stylesheet"/>
     </head>
 
@@ -85,7 +84,7 @@
 
                                 <div class="slide-control">
                                     <div class="view-more">
-                                        <a href = "#">+ 차트 더보기</a>
+                                        <a href = "chart.html">+ 차트 더보기</a>
                                     </div>
                                     <div class="control-button">
                                         <button type = "button" class = "prev-button">
