--- a/album.html
+++ b/album.html
@@ -32,18 +32,23 @@
 
             <main class = "main-container">
                 <div class="album-Banner">
-                    <div class="album-cover"></div>
+                    <div class="album-cover">
+                        <div class="skeleton-loading"></div>
+                    </div>
                     <div class="album-info">
                         <div class="album-title">
                             <div class="album-name">
+                                <div class="skeleton-loading"></div>
                                 <h1></h1>
                             </div>
                             <div class="release-date">
+                                <div class="skeleton-loading"></div>
                                 <p></p>
                             </div>
                         </div>
 
                         <div class="total-track">
+                            <div class="skeleton-loading"></div>
                             <span></span>
                         </div>
                     </div>
@@ -54,7 +59,7 @@
                         <h1>TRACK LIST</h1>
                     </div>
 
-                    <div class="skeleton-loading">
+                    <div class="trackList-loading">
                         <div class="skeleton-item">
                             <div class="img-area"></div>
                             <div class="title-area"></div>
