--- a/chart.html
+++ b/chart.html
@@ -38,7 +38,9 @@
                     </div>
 
                     <div class="weeklyChart-dashboard">
-                        <div class="weeklyArtist-imgBox"></div>
+                        <div class="weeklyArtist-imgBox">
+                            <div class="skeleton-loading"></div>
+                        </div>
 
                         <div class="data-wrap">
                             <div class="weeklyChart-data">
@@ -83,6 +85,7 @@
                             </div>
 
                             <div class="weeklyChart-graph">
+                                <div class="skeleton-loading"></div>
                                 <div class="chart-graph">
                                     <canvas id = "myChart"></canvas>
                                 </div>
@@ -96,69 +99,45 @@
                         <h1>아티스트 앨범</h1>
                     </div>
 
-                    <div class="skeleton-loading">
+                    <div class="albums-loading">
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
 
                         <div class="skeleton-item">
                             <div class="img-area"></div>
-                            <div class="info-area">
-                                <div class="title-area"></div>
-                                <div class="date-area"></div>
-                            </div>
+                            <div class="info-area"></div>
                         </div>
                     </div>
 
@@ -171,12 +150,16 @@
                             <h1>금주 차트 1위 곡</h1>
                         </div>
                         <div class="artist-name">
+                            <div class="skeleton-loading"></div>
                             <h2></h2>
                         </div>
-                        <div class="artist-imgBox"></div>
+                        <div class="artist-imgBox">
+                            <div class="skeleton-loading"></div>
+                        </div>
                     </div>
                     <div class="chart1st-track">
                         <div class="track-info">
+                            <div class="skeleton-loading"></div>
                             <div class="track-img"></div>
                             <div class="track-title">
                                 <h4></h4>
@@ -187,6 +170,7 @@
                         </div>
                         
                         <div class="topTrack-video">
+                            <div class="skeleton-loading"></div>
                         </div>
                     </div>
                 </div>
